--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,25 @@
 services:
   db:
-    container_name: pg
-    image: postgres
+    container_name: pg-rails
+    image: postgres:14.2-alpine3.15
     restart: always
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - db:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: 12345
+      POSTGRES_PASSWORD: 1234
+    ports:
+      - "5454:5432"
     networks:
       - backend
   api:
     container_name: api
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: 
+      context: ./
+      dockerfile: Dockerfile.dev
+    command: puma
+    working_dir: /api
     volumes:
-      - .:/apirestful
+      - .:/api
     ports:
       - "3000:3000"
     networks:
@@ -24,3 +29,5 @@ services:
 networks:
   backend:
     driver: bridge
+volumes:
+  db:
