--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,6 @@
 FROM ruby:3.1.1-alpine3.15
 
-RUN apk add --update --no-cache build-base libpq-dev tzdata git 
-RUN gem install rails -v 7.0.2.3
+RUN apk add --update build-base libpq-dev tzdata git 
 
 WORKDIR /app
 ADD Gemfile Gemfile.lock /app/
