--- a/config/database.yml
+++ b/config/database.yml
@@ -17,11 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: <%= ENV['POSTGRES_HOST'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  host: db
-  username: postgres
-  password: 1234
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
